Update jars and java configs